--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -13,10 +13,15 @@
     <div class="container">
         <h1>Trail Analysis Results</h1>
         <div id="analysisResults"></div>
-        <div id="map"></div>
-        <div id="chartContainer">
-            <canvas id="altitudeChart"></canvas>
+
+        <div class="map-chart-container">
+            <div id="map"></div>
+            <div id="chartContainer">
+                <canvas id="altitudeChart"></canvas>
+            </div>
         </div>
+
+
     </div>
     <script src="/js/displayResults.js"></script>
 </body>
