--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,8 +14,14 @@
     <input type="file" id="gpxFile" accept=".gpx">
     <div id="filename-display"></div>
     <button onclick="uploadFile()">Upload and Analyze</button>
+    
 
+    <div id="demo-button-container">
+        <p></p>
+        <button onclick="loadDemo()" class="demo-button">View Demo Track</button>
     </div>
+
+    </div> <!--index container div-->
     <script src="/js/fileUpload.js"></script>
 </body>
 </html>
